FIX  Book Now button has no drop shadow and is in wrong position. see page 33 of design

--- a/src/app/pages/class/class.page.scss
+++ b/src/app/pages/class/class.page.scss
@@ -91,13 +91,12 @@
     }
 
     &__btn {
-        // margin-top: auto;
-        // margin-bottom: 28px;
-        // margin-top: 45px;
+        margin-top: 22px;
         width: 114px;
         height: 40px;
         --border-radius: 2px;
         border-radius: 2px;
+        box-shadow: 0 3px 6px 0 $light-gray1;
     }
 
     &__btn-text {
